<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_in"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <CalendarView
                android:id="@+id/calendarView"
                style="@android:style/Widget.DeviceDefault.CalendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxDate="1/1/2025"
                android:minDate="03/01/2020" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="202dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/summary"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="202dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/country_info"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="202dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/city_info"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request" />

            <Button
                android:id="@+id/button_goto_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plot" />

            <Button
                android:id="@+id/buttonList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Список стран" />


        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>